0.4.16/_sources/gallery/add_grayscale_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_grayscale_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_add_grayscale_image.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_grayscale_image.py:


Add grayscale image
===================

Display one grayscale image using the add_image API.

.. GENERATED FROM PYTHON SOURCE LINES 7-20



.. image-sg:: /gallery/images/sphx_glr_add_grayscale_image_001.png
   :alt: add grayscale image
   :srcset: /gallery/images/sphx_glr_add_grayscale_image_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    from skimage import data
    import napari
    import numpy as np


    # simulating a grayscale image here for testing contrast limits adjustments
    image = data.astronaut().mean(-1) * 100 + 100
    image += np.random.rand(*image.shape) * 3000
    viewer = napari.view_image(image.astype(np.uint16))

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_grayscale_image.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: add_grayscale_image.py <add_grayscale_image.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: add_grayscale_image.ipynb <add_grayscale_image.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
